Fix edit button overlap issues

--- a/src/main/webapp/app/course/manage/overview/course-management-exercise-row.scss
+++ b/src/main/webapp/app/course/manage/overview/course-management-exercise-row.scss
@@ -118,6 +118,7 @@
     }
 
     .button-row {
+        z-index: 1;
         min-width: 132px;
         align-items: center;
     }
